@@ -1,3 +1,15 @@
+2007-02-28  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* lib/Foomatic/DB.pm: Added new find_printer() method, to find
+	  printer entries in the database based on IEEE-1284 device IDs
+	  (from printer auto-detection), make/model, make, or model.
+	  This is for a new search function on the site and also for
+	  finding driver packages by printer setup tools.
+
+	* foomatic-searchprinter.in, configure.ac, Makefile.in: Added
+	  simple tool to find printers in the locally installed
+	  Foomatic database using the new find_printer() method.
+
 2007-02-26  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* foomatic-perl-data.c, lib/Foomatic/DB.pm: Let "<obsolete>" tags
